--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,26 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/",
-            "methods": ["GET", "POST", "PATCH", "DELETE","PUT","OPTIONS"]
-        }
-    ]
+  "version": 2,
+  "builds": [
+      {
+          "src": "./index.js",
+          "use": "@vercel/node"
+      }
+  ],
+  "routes": [
+      {
+          "src": "/(.*)",
+          "dest": "/",
+          "methods": [
+            "GET",
+            "HEAD",
+            "PATCH",
+            "POST",
+            "DELETE",
+            "OPTIONS"
+          ],
+          "headers": {
+            "Access-Control-Allow-Origin": "*"
+          }
+      }
+  ]
 }
